Commit SVN changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 .DS_Store
+typetura/.svn/wc.db-journal
+typetura/.svn/wc.db
+typetura/.svn/format
+typetura/.svn/entries
+.svn/wc.db-journal
+.svn/wc.db
+.svn/format
+.svn/entries
